--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.56.1",
+    "slick-carousel": "^1.8.1",
+    "use-react-router-breadcrumbs": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
