--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Биржа труда",
-  "name": "Приложение биржи труда",
+  "name": "ОКУ ЦЗН г. Карталы",
   "icons": [
     {
       "src": "favicon.ico",
