--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-awesome-reveal": "^4.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-imask": "^6.6.1",
+    "react-number-format": "^5.2.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
