--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-slick": "^0.23.10",
     "axios": "^1.3.4",
     "chart.js": "^4.3.0",
+    "crypto-js": "^4.1.1",
     "handy-svg": "^1.0.8",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
@@ -63,6 +64,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/crypto-js": "^4.1.1",
     "sass": "^1.62.1"
   }
 }
